Back/achat/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: achats-ingress
  namespace: achats
spec:
  rules:
  - http:
      paths:
      - path: /achats
        pathType: Prefix
        backend:
          service:
            name: service-front
            port: 
              number: 80
